# log_gaming_on_windows

./: .gitignore  Cargo.toml  README.md  ignored_apps.txt  my_database.db
src/: main.rs
