[package]
name = "timing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
# reqwest = { version =  "0.11.18", features = ["blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tasklist = "0.2.12"
termion = "2.0.1"
